--- a/milestone_4/CPSC304_Node_Project-main/public/index.html
+++ b/milestone_4/CPSC304_Node_Project-main/public/index.html
@@ -237,7 +237,7 @@
         </tbody>
     </table>
 
-    <hr>
+    <br><hr><br>
 
     <h2>Plants Table</h2>
     <div class="scrollable-table">
@@ -406,8 +406,8 @@
     <div id="projectionResultMsg"></div>
     <table id="projectionTable" border="1">
         <thead><tr></tr></thead>
-        <tbody></tbody>
-    </table>    
+        <tbody></tbody><br>
+    </table>
 
     <h2>DIVISION DEMO: Species on All Soil Types</h2>
     <button id="findSpeciesButton">Find Species</button>
